Add command interface for userland. Mostly import code from DHowett to keep it compatible with his driver

--- a/crosecbus/crosecbus.vcxproj
+++ b/crosecbus/crosecbus.vcxproj
@@ -151,11 +151,13 @@
     <ClInclude Include="crosecbus.h" />
     <ClInclude Include="ec_commands.h" />
     <ClInclude Include="trace.h" />
+    <ClInclude Include="userspaceQueue.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="comm-lpc.c" />
     <ClCompile Include="comm-mec_lpc.c" />
     <ClCompile Include="crosecbus.c" />
+    <ClCompile Include="userspaceQueue.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
